--- a/Statki/Assembly-CSharp-Editor.csproj
+++ b/Statki/Assembly-CSharp-Editor.csproj
@@ -66,6 +66,7 @@
      <None Include="Assets\Tiled2Unity\Tiled2Unity.export.txt" />
      <None Include="Assets\Tiled2Unity\Shaders\shaDepth.shader" />
      <None Include="Assets\Tiled2Unity\Shaders\shaDiffuseDepth.shader" />
+     <None Include="Assets\MainMenu\story.txt" />
      <None Include="Assets\Tiled2Unity\Imported\left-down-corner.tiled2unity.xml" />
      <None Include="Assets\Tiled2Unity\Materials\_ReadMe.txt" />
      <None Include="Assets\Tiled2Unity\Textures\_ReadMe.txt" />
