--- a/Statki/Assembly-CSharp.csproj
+++ b/Statki/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\MainMenu\Scripts\MainMenu.cs" />
      <Compile Include="Assets\Scripts\BossButtonScript.cs" />
      <Compile Include="Assets\Scripts\CameraFollow.cs" />
      <Compile Include="Assets\Scripts\DamageByCollision.cs" />
@@ -61,6 +62,7 @@
      <Compile Include="Assets\Scripts\PlayerShooting.cs" />
      <Compile Include="Assets\Scripts\PlayerSpawner.cs" />
      <Compile Include="Assets\Scripts\SelfDestructBullet.cs" />
+     <Compile Include="Assets\Scripts\enemy\BossShoot.cs" />
      <Compile Include="Assets\Scripts\enemy\CatchEnemy.cs" />
      <Compile Include="Assets\Scripts\enemy\CatchObstance.cs" />
      <Compile Include="Assets\Scripts\enemy\EnemyControlMove.cs" />
@@ -90,6 +92,7 @@
      <None Include="Assets\Tiled2Unity\Tiled2Unity.export.txt" />
      <None Include="Assets\Tiled2Unity\Shaders\shaDepth.shader" />
      <None Include="Assets\Tiled2Unity\Shaders\shaDiffuseDepth.shader" />
+     <None Include="Assets\MainMenu\story.txt" />
      <None Include="Assets\Tiled2Unity\Imported\left-down-corner.tiled2unity.xml" />
      <None Include="Assets\Tiled2Unity\Materials\_ReadMe.txt" />
      <None Include="Assets\Tiled2Unity\Textures\_ReadMe.txt" />
